# llm-rs

crates/backend-api/: Cargo.toml
crates/backend-api/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/cpu-backend/: Cargo.toml
crates/cpu-backend/src/: lib.rs
crates/cpu-backend/tests/: backend_tests.rs
crates/gguf-parser/: Cargo.toml
crates/gguf-parser/src/: header.rs  io.rs  lib.rs  tensor.rs
crates/quant-4bit/: Cargo.toml
crates/quant-8bit/: Cargo.toml
crates/quantization-api/: Cargo.toml
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs
crates/wgpu-backend/: Cargo.toml
docs/: ROADMAP.md
rust-llm-inference/: Cargo.toml
rust-llm-inference/crates/backend-api/: Cargo.toml
rust-llm-inference/crates/backend-api/src/: lib.rs
rust-llm-inference/crates/cli/: Cargo.toml
rust-llm-inference/crates/cli/src/: main.rs
rust-llm-inference/crates/core/: Cargo.toml
rust-llm-inference/crates/core/src/: lib.rs
rust-llm-inference/crates/cpu-backend/: Cargo.toml
rust-llm-inference/crates/cpu-backend/src/: lib.rs
rust-llm-inference/crates/gguf-parser/: Cargo.toml
rust-llm-inference/crates/gguf-parser/src/: lib.rs
rust-llm-inference/crates/inference/: Cargo.toml
rust-llm-inference/crates/inference/src/: lib.rs
rust-llm-inference/crates/tokenizer/: Cargo.toml
rust-llm-inference/crates/tokenizer/src/: lib.rs
rust-llm-inference/crates/wgpu-backend/: Cargo.toml
rust-llm-inference/crates/wgpu-backend/src/: lib.rs
tests/: inference_flow.rs
