[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
inference = { path = "../inference" }
backend-api = { path = "../backend-api" } # For BackendChoice enum
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
# log = "0.4"
# env_logger = "0.10"

[[bin]]
name = "infer_cli"
path = "src/main.rs" 